--- a/index.html
+++ b/index.html
@@ -1,28 +1,60 @@
 <!DOCTYPE html>
 
+
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="main.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="application.js" type="text/javascript"></script>
+<link rel="shortcut icon" href="http://faviconist.com/icons/1ec6105373674e74aead213661af9383/favicon.ico" />
 <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 <title>Hot or Cold by Kelli Orrela</title>
 </head>
 
+
 	<body>
+
 	
-		<div id="left">
-			<h1>HOT</h1>
+		<div id="hot">
+			<h1>HOT?</h1>
 		</div>
 		
-		<div id="right">
-			<h1>COLD</h1>
-		</div>
-		
-		<div id="guess">
-			<form action="">
-			<input type="text" placeholder="Guess a number between 1 and 100.">
- 			</form>			
+		<div id="cold">
+			<h1>COLD?</h1>
 		</div>
 
+		
+		<form name="guessform">
+				<div id="guessfield">
+					<input type="text" input id="guessinput" name="guessinput" maxlength="3" placeholder="Type a guess from 1 to 100." autocomplete="off" onFocus="this.value=''" />	
+				</div>
+		</form>
+
+
+		<div class="buttoncontainer">
+			<input type="button" onclick="setUp();" id="playthegamebutton" value="Play the game" />
+		</div>
+
+		<div class="buttoncontainer">
+			<input type="button" onclick="checkGuess();" id="checkguessbutton" value="Check your guess" />
+		</div>
+
+		<div class="buttoncontainer">
+			<input type="button" onclick="setUp();" id="newgamebutton" value="Start a new game" />
+		</div>
+		
+
+		<div id="winner">
+			<h2>That's it! You're the winner!</h2>
+		</div>
+
+
+		<div class="buttoncontainer">
+		<input type="button" onclick="setUp();" id="playagainbutton" value="Play again" />
+		</div>
+
+
 	</body>
+
 
 </html>
